# computermoney

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-LICENSES.md  TRADEMARK.md  _config.yml  install.sh
.github/workflows/: ci.yml  dco.yml
docs/: _config.yml  architecture.md  demo-2-terminal.md  demo-video-script.md  index.md  llms-full.txt  llms.txt  mcp-usage.md  payment-flow.md  reference.md  testnet-2-terminal.md
examples/: key-genesis.rs
src/: chain.rs  demo.rs  discover.rs  fetch.rs  ledger.rs  main.rs  mcp.rs  net.rs  pay.rs  paywall.rs  policy.rs  protocol.rs  scan.rs  serve.rs  sp.rs  storage.rs  tunnel.rs  wallet.rs
