[package]
name = "computermoney"
version = "0.0.1"
edition = "2021"
description = "Bitcoin-native autonomous payments between AI agents"
license = "AGPL-3.0-only"

[dependencies]
bitcoin = { version = "0.32", features = ["rand-std"] }
bip39 = { version = "2.1", features = ["rand", "zeroize"] }
bdk_wallet = "3.0.0"
bdk_esplora = { version = "0.22.2", default-features = false, features = ["std", "blocking-https-rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
argon2 = "0.5.3"
chacha20poly1305 = "0.10.1"
rand = "0.8"
zeroize = "1"
boringtun = { version = "0.7.1", default-features = false }
mainline = "7.0.0"
bech32 = "0.11"
minreq = { version = "2", features = ["https-rustls"] }

[dev-dependencies]
sha2 = "0.10" # examples/key-genesis.rs: show the BIP-39 checksum bits

[[bin]]
name = "cm"
path = "src/main.rs"

[profile.release]
strip = true
